# cog

./: .gitignore  .gitmodules  LICENSE.txt  Makefile  Makefile.am  Makefile.custom  Makefile.sdl2  Makefile.static  PORT_STATUS.md  README  README.markdown  ROADMAP  Speedups.txt  TODO  TODO.txt  build_in_place.sh  coding_conventions.md  configure.ac  enforce_coding_standard.sh  enforce_coding_style.sh  run.sh
android-project/: local.properties  out.txt
android-project/jni/: SDL  SDL2_image-2.0.0  SDL2_mixer-2.0.0  SDL2_ttf-2.0.12
android-project/jni/src/: Android.mk  SDL2
assets/: 2d_anim_test.xcf  grid.xcf  level.tmx  test.json  test2.json  tileset.xcf
examples/: example_anim.c  example_basic.c  example_gles.c  example_grid.c  example_input.c  example_shape.c  example_sound.c  example_sprite.c  example_text.c  example_tiled.c  example_update.c
lang/python/: setup.py  test.py  test_anim.py  test_sound.py  test_sprite.py
lang/swig/: python_test.py
lua/: cog_lua.c
lua/lua/: main.lua
lua/luajit/: cog.lua  test.lua  test_anim.lua  test_sound.lua  test_sprite.lua
media/: kitten_anim.xcf  level.json  test.tmx  test2.tmx
mxe/: freealut.mk  index.html
python/: cog_main.pxd  cog_main.pyx  setup.py
src/: CMakeLists.txt  Makefile.am  SConstruct  cog.c  cog.h  cog_anim.c  cog_anim.h  cog_core.c  cog_core.h  cog_defs.h  cog_graphics.c  cog_graphics.h  cog_graphics_gles.c  cog_graphics_gles.h  cog_graphics_opengl.c  cog_graphics_opengl.h  cog_graphics_sdl.c  cog_graphics_sdl.h  cog_graphics_sdl2.c  cog_graphics_sdl2.h  cog_group.c  cog_group.h  cog_input.c  cog_input.h  cog_list.c  cog_list.h  cog_log.c  cog_log.h  cog_main.c  cog_main.h  cog_map.c  cog_map.h  cog_math.c  cog_math.h  cog_rect.c  cog_rect.h  cog_shape.c  cog_shape.h  cog_snd.c  cog_snd.h  (+41 more)
src/CMake/: .FindGLEW.cmake.swp  FindEGL.cmake  FindSDL2.cmake  FindSDL2_image.cmake
src/gles_util/: esShader.c  esShapes.c  esTransform.c  esUtil.c  esUtil.h
swig/: cog.i
tests/: test.c  test_anim.c  test_cog_state.c  test_emscripten.c  test_es.c  test_grid.c  test_input.c  test_list.c  test_map.c  test_sound.c  test_sprite.c  test_state.c  test_text.c  test_tiled.c  test_update.c  testanim.c  testlist.c  testsound.c  testtext.c  tmp_text.c
