AM_CFLAGS = --pedantic -Wall -std=c99 -O3 -Werror
AM_LDFLAGS =

noinst_LIBRARIES = libcog.a
libcog_a_SOURCES = cog_anim.c cog_core.c cog_graphics.c cog_graphics_gles.c cog_graphics_opengl.c cog_graphics_sdl.c cog_graphics_sdl2.c cog_group.c cog_input.c cog_list.c cog_log.c cog_main.c cog_map.c cog_math.c cog_snd.c cog_snd_al.c cog_snd_sdl2.c cog_sprite.c cog_state.c cog_test.c cog_text.c cog_text_freetype.c cog_text_sdl2.c cog_tween.c cog_window.c cog_window_gles.c cog_window_sdl.c cog_window_sdl2.c 
